sum changes, fixes