@@ -1,10 +1,11 @@
 buildscript {
     repositories {
+        mavenCentral()
         maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
         mavenCentral()
     }
     dependencies {
-        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
+        classpath 'org.spongepowered:mixingradle:0.7.38'
     }
 }
 
@@ -43,10 +44,24 @@ minecraft {
         }
         client {
             property 'forge.enabledGameTestNamespaces', mod_id
+            jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+                    '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
+                    '--add-opens', 'java.base/java.util=ALL-UNNAMED'
         }
         server {
             property 'forge.enabledGameTestNamespaces', mod_id
             args '--nogui'
+        }
+
+        gameTestServer {
+            property 'forge.enabledGameTestNamespaces', mod_id
+        }
+
+        data {
+
+            workingDirectory project.file('run-data')
+
+            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
         }
     }
 }
@@ -59,65 +74,48 @@ mixin {
 sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 repositories {
-    flatDir {
-        dir 'libs'
-    }
-    mavenCentral()
     maven {
         url "https://cursemaven.com"
         content {
             includeGroup "curse.maven"
         }
     }
-}
-
-configurations {
-    includeLib
-    implementation.extendsFrom includeLib
+    flatDir {
+        dir 'libs'
+    }
 }
 
 dependencies {
     minecraft 'net.minecraftforge:forge:' + minecraft_version + '-' + forge_version
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 
-    includeLib 'org.json:json:20231013'
-    includeLib 'com.kohlschutter.junixsocket:junixsocket-common:2.6.2'
-    includeLib 'com.kohlschutter.junixsocket:junixsocket-native-common:2.6.2'
 
-    implementation("org.apache.commons:commons-compress:1.28.0")
-    implementation 'commons-io:commons-io:2.15.1'
-    implementation 'org.apache.logging.log4j:log4j-core:2.25.4'
-    implementation 'org.apache.commons:commons-lang3:3.18.0'
-    implementation 'org.codehaus.plexus:plexus-utils:4.0.3'
-    implementation 'io.netty:netty-common:4.1.118.Final'
-    implementation("io.netty:netty-handler:4.2.12.Final")
-    implementation 'io.netty:netty-codec:4.1.125.Final'
-    implementation 'com.google.guava:guava:33.0.0-jre'
+    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.5.4"))
+    implementation(jarJar("io.github.llamalad7:mixinextras-forge:0.5.4")) {
+        jarJar.ranged(it, "[0.5.4,)")
+    }
 
-    compileOnly fg.deobf("blank:traveloptics:6.3.0-1.20.1")
-    compileOnly fg.deobf("blank:betterchunkloading:1.20.1-5.4")
-    compileOnly fg.deobf("blank:EnigmaticLegacy:2.30.1")
-    compileOnly fg.deobf("blank:mowziesmobs:1.7.3")
-    compileOnly fg.deobf("blank:difficulty_enhancement:0.1")
-    compileOnly fg.deobf("blank:goetydelight:1.2.0f2+20260225")
-    compileOnly fg.deobf("blank:goety:2.5.50.2")
-    compileOnly fg.deobf("blank:domesticationinnovation:1.7.1-1.20.1")
-    compileOnly fg.deobf("blank:faunify:forge-1.20.1-1.3.1")
-    compileOnly fg.deobf("blank:alexsmobs:1.22.9")
-    compileOnly fg.deobf("blank:create:1.20.1-6.0.8")
-    compileOnly fg.deobf("blank:irons_spellbooks:1.20.1-3.15.4")
-    compileOnly fg.deobf("blank:EndingLibrary:1.20.1-2.1.12beta-all")
-    compileOnly fg.deobf("blank:species:3.5")
-    compileOnly fg.deobf("blank:covenant_of_the_seven:2.2.6-hotfix")
-    compileOnly fg.deobf("blank:photon:forge-1.20.1-1.1.17")
+    implementation("org.jspecify:jspecify:1.0.0")
 
-    implementation fg.deobf("curse.maven:macabre-933001:6442644")
+    implementation fg.deobf(files("libs/goetydelight-1.2.0f2+20260225.jar"))
+    implementation fg.deobf(files("libs/goety-2.5.50.2.jar"))
+    implementation fg.deobf(files("libs/alexsmobs-1.22.9.jar"))
+    implementation fg.deobf(files("libs/create-1.20.1-6.0.8.jar"))
+    implementation fg.deobf(files("libs/irons_spellbooks-1.20.1-3.15.4.jar"))
+    implementation fg.deobf(files("libs/EndingLibrary-1.20.1-2.1.12beta-all.jar"))
+    implementation fg.deobf(files("libs/species-3.5.jar"))
+    implementation fg.deobf(files("libs/covenant_of_the_seven-2.2.6-hotfix.jar"))
+    implementation fg.deobf(files("libs/photon-forge-1.20.1-1.1.17.jar"))
+
+    implementation fg.deobf("curse.maven:difficulty-enhancement-1456194:7953458")
+    implementation fg.deobf("curse.maven:mowzies-mobs-250498:7815705")
+    implementation fg.deobf("curse.maven:enigmatic-legacy-336184:5600004")
+    implementation fg.deobf("curse.maven:to-tweaks-irons-spells-1046916:7424522")
     implementation fg.deobf("curse.maven:modernfix-790626:7911677")
     implementation fg.deobf("curse.maven:armageddon-1110642:7142556")
     implementation fg.deobf("curse.maven:l2h-909207:7746182")
     implementation fg.deobf("curse.maven:l2l-620203:6806000")
     implementation fg.deobf("curse.maven:composite-material-982540:6310307")
-    implementation fg.deobf("curse.maven:attributefix-280510:7612291")
     implementation fg.deobf("curse.maven:curios-309927:6418456")
     implementation fg.deobf("curse.maven:geckolib-388172:7553267")
     implementation fg.deobf("curse.maven:embeddium-908741:5681725")
@@ -129,17 +127,10 @@ dependencies {
     implementation fg.deobf("curse.maven:lendercataclysm-551586:7867528")
     implementation fg.deobf("curse.maven:legendary-monsters-944035:7628159")
     implementation fg.deobf("curse.maven:lionfish-api-1001614:5922047")
-    implementation fg.deobf("curse.maven:l2hostility-909207:7815389")
     implementation fg.deobf("curse.maven:goety-revelation-1236817:7638178")
-    implementation fg.deobf("curse.maven:l2library-620203:6806000")
     implementation fg.deobf("dev.xkmc.l2serial:l2serial:1.2.2")
     implementation fg.deobf("curse.maven:terramity-1084134:6054971")
     implementation fg.deobf("curse.maven:better-combat-by-daedelus-639842:7287334")
-    implementation fg.deobf("curse.maven:xaeros-world-map-317780:7598469")
-
-    runtimeOnly fg.deobf("curse.maven:cael-308989:5281700")
-
-    compileOnly fg.deobf("blank:photon:forge-1.20.1-1.1.17")
 }
 
 tasks.named('processResources', ProcessResources).configure {
@@ -155,10 +146,6 @@ tasks.named('processResources', ProcessResources).configure {
 }
 
 tasks.named('jar', Jar).configure {
-    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-    from {
-        configurations.includeLib.collect { it.isDirectory() ? it : zipTree(it) }
-    }
     manifest {
         attributes([
                 "Specification-Title": mod_id,
